Styles/_media.desktop.scss
header
{
    font-family: $title-font;
    -webkit-font-smoothing: antialiased;
    background: $primary-color;
    color: $primary-text-color;
    min-width: 349px;
    width: 100%;
    height: 200px;
    position: relative;
    margin-top: 9%;
}

/* adorner: left corner shadow */
header:before
{
    content: "";
    position: absolute;
    left: 8px;
    bottom: 0.1px;
    width: 1px;
    height: 12px;
    transform: skewX(45deg);
    box-shadow: 0px 0px 4px $drop-shadow-dark-color;
    z-index: 4;
}

/* adorner: right corner cut */
header:after
{
    content: "";
    position: absolute;
    left: 100%;
    top: -6px;
    width: 13px;
    height: 39px;
    background: $background-color;
    transform: skewX(45deg);
}

header h1
{
    position: absolute;
    left: 103px;
    top: 55px;
    margin: 0;
    font-size: $title-font-size;
    font-weight: $title-font-weight;
}

header h1:after
{
    position: absolute;
    left: 10.3em;
    top: 17px;
    width: 11pt;
    height: 4pt;
    
    content: "";
    background: $primary-text-color;
    animation: blink 1.1s linear infinite;
}
@keyframes blink
{
    0%
    {
        opacity: 0;
    }
    
    25%
    {
        opacity: 1;
    }
    
    75%
    {
        opacity: 1;
    }
    
    100%
    {
        opacity: 0;
    }
}

nav a
{
    float: left;
    width: 88px;
    height: 67px;
}

nav
{
    position: absolute;
    left: 0px;
    bottom: 0px;
    min-width: 299px;
    width: 100%;
    height: 66px;
}

/* adorner: bottom shadow */
nav:before
{
    content: "";
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: 100%;
    height: 1px;
    box-shadow: 0px 0px 2px $drop-shadow-light-color;
    z-index: -1;
}

/* adorner: left corner cut */
nav:after
{
    content: "";
    position: absolute;
    left: -10px;
    bottom: -2px;
    width: 17px;
    height: 17px;
    background: $background-color;
    transform: skewX(45deg);
}

main
{
    float: left;
    position: relative;
    margin-left: 22px;

    width: 95%;
    
    font-family: $normal-font;
    font-size: $normal-font-size;
}

main:before
{
    content: "{";
    font-family: $background-font;
    font-size: 45pt;
    color: $border-color;
    
    float: left;
    position: relative;
    left: -29px;
    top: 26pt;
    width: 0;
}

main:after
{
    content: "}";
    font-family: $background-font;
    font-size: 45pt;
    color: $border-color;
    
    position: relative;
    top: -1em;
    left: 101%;
    text-align: right;
    margin-bottom: -2em;
}

main h1
{
    font-size: $heading-font-size-large;
}

main h2
{
    font-size: $heading-font-size-medium;
}

main h3
{
    font-size: $heading-font-size-small;
}

main h1, main h2, main h3
{
    font-family: $heading-font;
    margin-bottom: $margin;
    margin-top: $margin;
}

main p
{
    margin-top: $margin;
    margin-bottom: $margin;
}

body
{
    float: none;
    margin: auto;
    width: 75%;
}

a.tag:hover
{
    color: $accent-text-color;
}

a
{
    color: $accent-text-color;
}

a:hover
{
    color: $primary-color;
}

a.location
{
    border-bottom: $border-thickness dotted $accent-text-color;
    text-decoration: none;
}

a.location:hover
{
    border-bottom: $border-thickness dotted $primary-color;
}

a.author
{
    border-bottom: $border-thickness dotted $accent-text-color;
    text-decoration: none;
    cursor: pointer;
}

a.author:hover
{
    border-bottom: $border-thickness dotted $primary-color;
}

.form-inline
{
    display: inline;
}

.button-special
{
    display: inline-block;
    position: relative;
    color: $primary-text-color;
    background: $primary-color;
    font-size: $small-font-size;
    padding: 0;
    border: $border-thickness solid $primary-dark-color;
    box-shadow: $border-thickness $border-thickness 0px $primary-light-color inset;
    outline: none;
    cursor: pointer;
    overflow: visible;
}

.button-special:before
{
    content: "";
    position: absolute;
    left: 0;
    top: $corner-small + $border-thickness * 2;
    bottom: 0;
    right: $corner-small;
    box-shadow: 0 $border-thickness $border-thickness * 2 $drop-shadow-dark-color;
    z-index: -1;
}

.button-special-leftcorner
{
    border-top: $corner-small solid $background-color;
    border-right: $corner-small solid transparent;
    position: absolute;
    left: -$border-thickness;
    top: -$border-thickness;
}

.button-special-leftcornerborder
{
    border-top: $corner-small solid $primary-dark-color;
    border-right: $corner-small solid transparent;
    position: absolute;
    left: 0;
    top: 0;
}

.button-special-leftcornerhighlight
{
    border-top: $corner-small solid $primary-light-color;
    border-right: $corner-small solid transparent;
    position: absolute;
    left: $border-thickness;
    top: $border-thickness;
}

.button-special-rightcorner
{
    border-bottom: $corner-small solid $background-color;
    border-left: $corner-small solid transparent;
    position: absolute;
    bottom: -$border-thickness;
    right: -$border-thickness;
    z-index: 1;
}

.button-special-rightcornershadow
{
    border-bottom: $corner-small + $border-thickness solid $primary-dark-shadow-color;
    border-left: $corner-small + $border-thickness solid transparent;
    position: absolute;
    right: 0;
    bottom: 0;
}

.button-special-rightcornerborder
{
    border-bottom: $corner-small + $border-thickness solid $primary-dark-color;
    border-left: $corner-small + $border-thickness solid transparent;
    position: absolute;
    right: 0;
    bottom: -$border-thickness;
}

.button-special-rightshadow
{
    border-right: $border-thickness solid $primary-dark-shadow-color;
    position: absolute;
    top: $border-thickness;
    bottom: 0;
    right: 0;
}

.button-special-bottomshadow
{
    border-bottom: $border-thickness solid $primary-dark-shadow-color;
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
}
/* ... */

